--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,8 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnNewRoute"
-        tools:context=".MapsActivity" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_info1"
+        app:layout_constraintVertical_bias="10"
+        tools:context=".MapsActivity"
+        tools:layout_editor_absoluteX="0dp" />
 
     <Button
         android:id="@+id/btnNewRoute"
@@ -32,5 +34,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/btnNewRoute"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView_info1"
+        android:layout_width="0dp"
+        android:layout_height="27dp"
+        android:paddingLeft="10dp"
+        android:text="TextView"
+        android:textColor="@color/common_google_signin_btn_text_dark_focused"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnNewRoute" />
 
 </android.support.constraint.ConstraintLayout>
