--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,17 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--android:name="com.google.android.gms.maps.SupportMapFragment" -->
+
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_info1"
         app:layout_constraintVertical_bias="10"
-        tools:context=".MapsActivity"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:context=".MapsActivity" />
 
     <Button
         android:id="@+id/btnNewRoute"
